# foliolens

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  SCOPE.md  pyproject.toml
.github/workflows/: ci.yml
fixtures/: funds.csv  published_returns.csv
fixtures/nav_snapshots/: nav.parquet
fixtures/nav_snapshots/amfi_code=103340/: data.parquet
fixtures/nav_snapshots/amfi_code=108466/: data.parquet
fixtures/nav_snapshots/amfi_code=114616/: data.parquet
fixtures/nav_snapshots/amfi_code=118663/: data.parquet
fixtures/nav_snapshots/amfi_code=119018/: data.parquet
fixtures/nav_snapshots/amfi_code=120197/: data.parquet
fixtures/nav_snapshots/amfi_code=120334/: data.parquet
fixtures/nav_snapshots/amfi_code=120381/: data.parquet
fixtures/nav_snapshots/amfi_code=120586/: data.parquet
fixtures/nav_snapshots/amfi_code=120591/: data.parquet
fixtures/nav_snapshots/amfi_code=120679/: data.parquet
fixtures/nav_snapshots/amfi_code=120754/: data.parquet
fixtures/nav_snapshots/amfi_code=122639/: data.parquet
scripts/: eyeball_returns.py  freeze_snapshots.py
specs/: spec-analytics.md  spec-returns.md  step-00-return-engine.md
src/foliolens/: __init__.py  cli.py  data_access.py
src/foliolens/ingest/: __init__.py  land.py  mftool_client.py
src/foliolens/model/: __init__.py  entities.py  holdings.py  investments.py  sources.py  value_objects.py  weights.py
src/foliolens/nav/: __init__.py  month_end.py
src/foliolens/report/: __init__.py  excel.py
tests/: TESTS.md  conftest.py  test_data_access.py  test_mftool_client.py
tests/invariants/: test_annualization.py  test_convert.py  test_decimal.py  test_domain_model.py  test_twr.py
(+7 files in other folders)
