[project]
name = "foliolens"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "mftool",
    "duckdb",
    "pyarrow",
    "pandas",
    "ffn",
    "empyrical-reloaded",
    "xlsxwriter",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foliolens"]
