[project]
name = "foliolens"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "mftool",
    "duckdb",
    "pyarrow",
    "pandas",
    "ffn",
    "empyrical-reloaded",
    "xlsxwriter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foliolens"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0",
]
